# emergingtechnologyresearch

./: README.md  pyproject.toml  report.json  report.md
src/emergingtechnologyresearch/: __init__.py  crew.py  main.py
