[project]
name = "emergingtechnologyresearch"
version = "0.1.0"
description = "emergingTechnologyResearch using crewAI"
authors = [{ name = "Your Name", email = "you@example.com" }]
requires-python = ">=3.10,<3.14"
dependencies = [
    "crewai[bedrock,bedrock-async,tools]==1.10.1",
    "langfuse>=4.0.0",
    "openinference-instrumentation-crewai>=1.0.0",
    "openinference-instrumentation-litellm>=0.1.29",
    "pybase64>=1.4.3",
]