[project]
name = "emergingtechnologyresearch"
version = "0.1.0"
description = "emergingTechnologyResearch using crewAI"
authors = [{ name = "Your Name", email = "you@example.com" }]
requires-python = ">=3.10,<3.14"
dependencies = [
    "crewai[bedrock,bedrock-async,tools]==1.10.1",
    "aiobotocore>=2.13.0",
    "langfuse>=4.0.0",
    "openinference-instrumentation-crewai>=1.0.0",
    "openinference-instrumentation-litellm>=0.1.29",
    "pybase64>=1.4.3",
]

[project.scripts]
emergingtechnologyresearch = "emergingtechnologyresearch.main:run"
run_crew = "emergingtechnologyresearch.main:run"
train = "emergingtechnologyresearch.main:train"
replay = "emergingtechnologyresearch.main:replay"
test = "emergingtechnologyresearch.main:test"
run_with_trigger = "emergingtechnologyresearch.main:run_with_trigger"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.crewai]
type = "crew"